// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should match snapshot with a data object 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    id="SHMOOP"
    location="SHMOOP"
    stats={
        Object {
            "2005": 0.521,
            "2017": 0.521,
            "2018": 0.521,
            "2019": 0.521,
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div>
        <h1>
                SHMOOP
        </h1>
        <ul>
                <li
                        className="Green"
                >
                        2005
                        : 
                        0.521
                </li>
                <li
                        className="Green"
                >
                        2017
                        : 
                        0.521
                </li>
                <li
                        className="Green"
                >
                        2018
                        : 
                        0.521
                </li>
                <li
                        className="Green"
                >
                        2019
                        : 
                        0.521
                </li>
        </ul>
</div>,
      "className": "Card",
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1>
            SHMOOP
</h1>,
          <ul>
            <li
                        className="Green"
            >
                        2005
                        : 
                        0.521
            </li>
            <li
                        className="Green"
            >
                        2017
                        : 
                        0.521
            </li>
            <li
                        className="Green"
            >
                        2018
                        : 
                        0.521
            </li>
            <li
                        className="Green"
            >
                        2019
                        : 
                        0.521
            </li>
</ul>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "SHMOOP",
          },
          "ref": null,
          "rendered": "SHMOOP",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li
                className="Green"
>
                2005
                : 
                0.521
</li>,
              <li
                className="Green"
>
                2017
                : 
                0.521
</li>,
              <li
                className="Green"
>
                2018
                : 
                0.521
</li>,
              <li
                className="Green"
>
                2019
                : 
                0.521
</li>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "SHMOOP2005",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "2005",
                  ": ",
                  0.521,
                ],
                "className": "Green",
              },
              "ref": null,
              "rendered": Array [
                "2005",
                ": ",
                0.521,
              ],
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "SHMOOP2017",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "2017",
                  ": ",
                  0.521,
                ],
                "className": "Green",
              },
              "ref": null,
              "rendered": Array [
                "2017",
                ": ",
                0.521,
              ],
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "SHMOOP2018",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "2018",
                  ": ",
                  0.521,
                ],
                "className": "Green",
              },
              "ref": null,
              "rendered": Array [
                "2018",
                ": ",
                0.521,
              ],
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "SHMOOP2019",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "2019",
                  ": ",
                  0.521,
                ],
                "className": "Green",
              },
              "ref": null,
              "rendered": Array [
                "2019",
                ": ",
                0.521,
              ],
              "type": "li",
            },
          ],
          "type": "ul",
        },
      ],
      "type": "div",
    },
    "type": "article",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div>
          <h1>
                    SHMOOP
          </h1>
          <ul>
                    <li
                              className="Green"
                    >
                              2005
                              : 
                              0.521
                    </li>
                    <li
                              className="Green"
                    >
                              2017
                              : 
                              0.521
                    </li>
                    <li
                              className="Green"
                    >
                              2018
                              : 
                              0.521
                    </li>
                    <li
                              className="Green"
                    >
                              2019
                              : 
                              0.521
                    </li>
          </ul>
</div>,
        "className": "Card",
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h1>
              SHMOOP
</h1>,
            <ul>
              <li
                            className="Green"
              >
                            2005
                            : 
                            0.521
              </li>
              <li
                            className="Green"
              >
                            2017
                            : 
                            0.521
              </li>
              <li
                            className="Green"
              >
                            2018
                            : 
                            0.521
              </li>
              <li
                            className="Green"
              >
                            2019
                            : 
                            0.521
              </li>
</ul>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "SHMOOP",
            },
            "ref": null,
            "rendered": "SHMOOP",
            "type": "h1",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <li
                  className="Green"
>
                  2005
                  : 
                  0.521
</li>,
                <li
                  className="Green"
>
                  2017
                  : 
                  0.521
</li>,
                <li
                  className="Green"
>
                  2018
                  : 
                  0.521
</li>,
                <li
                  className="Green"
>
                  2019
                  : 
                  0.521
</li>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "SHMOOP2005",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "2005",
                    ": ",
                    0.521,
                  ],
                  "className": "Green",
                },
                "ref": null,
                "rendered": Array [
                  "2005",
                  ": ",
                  0.521,
                ],
                "type": "li",
              },
              Object {
                "instance": null,
                "key": "SHMOOP2017",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "2017",
                    ": ",
                    0.521,
                  ],
                  "className": "Green",
                },
                "ref": null,
                "rendered": Array [
                  "2017",
                  ": ",
                  0.521,
                ],
                "type": "li",
              },
              Object {
                "instance": null,
                "key": "SHMOOP2018",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "2018",
                    ": ",
                    0.521,
                  ],
                  "className": "Green",
                },
                "ref": null,
                "rendered": Array [
                  "2018",
                  ": ",
                  0.521,
                ],
                "type": "li",
              },
              Object {
                "instance": null,
                "key": "SHMOOP2019",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "2019",
                    ": ",
                    0.521,
                  ],
                  "className": "Green",
                },
                "ref": null,
                "rendered": Array [
                  "2019",
                  ": ",
                  0.521,
                ],
                "type": "li",
              },
            ],
            "type": "ul",
          },
        ],
        "type": "div",
      },
      "type": "article",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "prevContext": true,
          },
        },
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Card should match snapshot with a data object and function 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    id="SHMOOP"
    location="SHMOOP"
    selected={[Function]}
    stats={
        Object {
            "2005": 0.521,
            "2017": 0.521,
            "2018": 0.521,
            "2019": 0.521,
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div>
        <h1>
                SHMOOP
        </h1>
        <ul>
                <li
                        className="Green"
                >
                        2005
                        : 
                        0.521
                </li>
                <li
                        className="Green"
                >
                        2017
                        : 
                        0.521
                </li>
                <li
                        className="Green"
                >
                        2018
                        : 
                        0.521
                </li>
                <li
                        className="Green"
                >
                        2019
                        : 
                        0.521
                </li>
        </ul>
</div>,
      "className": "Card",
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1>
            SHMOOP
</h1>,
          <ul>
            <li
                        className="Green"
            >
                        2005
                        : 
                        0.521
            </li>
            <li
                        className="Green"
            >
                        2017
                        : 
                        0.521
            </li>
            <li
                        className="Green"
            >
                        2018
                        : 
                        0.521
            </li>
            <li
                        className="Green"
            >
                        2019
                        : 
                        0.521
            </li>
</ul>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "SHMOOP",
          },
          "ref": null,
          "rendered": "SHMOOP",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li
                className="Green"
>
                2005
                : 
                0.521
</li>,
              <li
                className="Green"
>
                2017
                : 
                0.521
</li>,
              <li
                className="Green"
>
                2018
                : 
                0.521
</li>,
              <li
                className="Green"
>
                2019
                : 
                0.521
</li>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "SHMOOP2005",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "2005",
                  ": ",
                  0.521,
                ],
                "className": "Green",
              },
              "ref": null,
              "rendered": Array [
                "2005",
                ": ",
                0.521,
              ],
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "SHMOOP2017",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "2017",
                  ": ",
                  0.521,
                ],
                "className": "Green",
              },
              "ref": null,
              "rendered": Array [
                "2017",
                ": ",
                0.521,
              ],
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "SHMOOP2018",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "2018",
                  ": ",
                  0.521,
                ],
                "className": "Green",
              },
              "ref": null,
              "rendered": Array [
                "2018",
                ": ",
                0.521,
              ],
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "SHMOOP2019",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "2019",
                  ": ",
                  0.521,
                ],
                "className": "Green",
              },
              "ref": null,
              "rendered": Array [
                "2019",
                ": ",
                0.521,
              ],
              "type": "li",
            },
          ],
          "type": "ul",
        },
      ],
      "type": "div",
    },
    "type": "article",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div>
          <h1>
                    SHMOOP
          </h1>
          <ul>
                    <li
                              className="Green"
                    >
                              2005
                              : 
                              0.521
                    </li>
                    <li
                              className="Green"
                    >
                              2017
                              : 
                              0.521
                    </li>
                    <li
                              className="Green"
                    >
                              2018
                              : 
                              0.521
                    </li>
                    <li
                              className="Green"
                    >
                              2019
                              : 
                              0.521
                    </li>
          </ul>
</div>,
        "className": "Card",
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h1>
              SHMOOP
</h1>,
            <ul>
              <li
                            className="Green"
              >
                            2005
                            : 
                            0.521
              </li>
              <li
                            className="Green"
              >
                            2017
                            : 
                            0.521
              </li>
              <li
                            className="Green"
              >
                            2018
                            : 
                            0.521
              </li>
              <li
                            className="Green"
              >
                            2019
                            : 
                            0.521
              </li>
</ul>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "SHMOOP",
            },
            "ref": null,
            "rendered": "SHMOOP",
            "type": "h1",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <li
                  className="Green"
>
                  2005
                  : 
                  0.521
</li>,
                <li
                  className="Green"
>
                  2017
                  : 
                  0.521
</li>,
                <li
                  className="Green"
>
                  2018
                  : 
                  0.521
</li>,
                <li
                  className="Green"
>
                  2019
                  : 
                  0.521
</li>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "SHMOOP2005",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "2005",
                    ": ",
                    0.521,
                  ],
                  "className": "Green",
                },
                "ref": null,
                "rendered": Array [
                  "2005",
                  ": ",
                  0.521,
                ],
                "type": "li",
              },
              Object {
                "instance": null,
                "key": "SHMOOP2017",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "2017",
                    ": ",
                    0.521,
                  ],
                  "className": "Green",
                },
                "ref": null,
                "rendered": Array [
                  "2017",
                  ": ",
                  0.521,
                ],
                "type": "li",
              },
              Object {
                "instance": null,
                "key": "SHMOOP2018",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "2018",
                    ": ",
                    0.521,
                  ],
                  "className": "Green",
                },
                "ref": null,
                "rendered": Array [
                  "2018",
                  ": ",
                  0.521,
                ],
                "type": "li",
              },
              Object {
                "instance": null,
                "key": "SHMOOP2019",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "2019",
                    ": ",
                    0.521,
                  ],
                  "className": "Green",
                },
                "ref": null,
                "rendered": Array [
                  "2019",
                  ": ",
                  0.521,
                ],
                "type": "li",
              },
            ],
            "type": "ul",
          },
        ],
        "type": "div",
      },
      "type": "article",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "prevContext": true,
          },
        },
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Card should match snapshot with an empty data object 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    id=""
    location=""
    stats={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div>
        <h1 />
        <ul>
                
        </ul>
</div>,
      "className": "Card",
      "onClick": [Function],
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1 />,
          <ul>
            
</ul>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "",
          },
          "ref": null,
          "rendered": "",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [],
          },
          "ref": null,
          "rendered": Array [],
          "type": "ul",
        },
      ],
      "type": "div",
    },
    "type": "article",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div>
          <h1 />
          <ul>
                    
          </ul>
</div>,
        "className": "Card",
        "onClick": [Function],
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h1 />,
            <ul>
              
</ul>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "",
            },
            "ref": null,
            "rendered": "",
            "type": "h1",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [],
            },
            "ref": null,
            "rendered": Array [],
            "type": "ul",
          },
        ],
        "type": "div",
      },
      "type": "article",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "prevContext": true,
          },
        },
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
